<resources>
    <string name="app_name">who wants to be a millionaire</string>

    <string name="start_title">Приветствуем вас в нашей игре</string>
    <string name="start_description">Кто хочет стать миллионером?</string>

    <string name="rule_title">Правила игры:</string>
    <string name="rule_description">Суть игры проста.\n\nВам необходимо правильно отвечать на вопросы.
                        За каждый правильный ответ вы получите сумму, соответствующую этапу\n\nПрава на ошибку у вас нет
                        \n\nОднако,у вас есть различные бонусы для достижения лучших результатов
    </string>

    <string name="bonus_title">Бонусы:</string>
    <string name="bonus_description">Бонусы:\n\n50/50 - убираются 2 из 4 варианта ответа.
                        \n\nПомощь зала - зал голосованием помогает выбрать верный вариант
                        \n\nПраво на ошибку - в одном вопросе вы можете допустить одну ошибку на ответ.
                        \n\nБонусы одноразовые
    </string>

    <string name="button_continue">Продолжить</string>
    <string name="button_prise">1000р.</string>

    <string name="letter_a">А:</string>
    <string name="letter_b">Б:</string>
    <string name="letter_c">В:</string>
    <string name="letter_d">Г:</string>

    <string name="answer_a">Ответ А:</string>
    <string name="answer_b">Ответ Б:</string>
    <string name="answer_c">Ответ В:</string>
    <string name="answer_d">Ответ Г:</string>

    <string name="question_number">Вопрос 1:</string>
    <string name="question">Какой год сотворения Иисуса соответствует иудейским предсказаниям?</string>

    <string name="positive_button">Обидно</string>
    <string name="negative_button">Заново</string>

    <string name="title_dialog">Вы проиграли</string>
    <string name="description_dialog">Нам жаль, но вы ничего не получите.</string>

</resources>