<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment"
    android:background="@color/bg">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/presenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:elevation="10dp"
        android:src="@drawable/presenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fifty_help_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:backgroundTint="@color/primary"


        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="24dp"

        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        app:icon="@drawable/ic__0_50"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="0dp"
        app:iconTint="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presenter"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/zal_help_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:backgroundTint="@color/primary"

        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"

        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        app:icon="@drawable/ic_groups"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"

        app:layout_constraintEnd_toStartOf="@+id/fail_help_button"
        app:layout_constraintStart_toEndOf="@+id/fifty_help_button"
        app:layout_constraintTop_toBottomOf="@+id/presenter"/>

    <Button
        android:id="@+id/fail_help_button"
        style="@style/Widget.Material3.Button.IconButton"
        android:backgroundTint="@color/primary"

        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="112dp"

        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"

        app:icon="@drawable/ic_add_task"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presenter" />

    <Button
        android:id="@+id/prise_button"
        android:backgroundTint="@color/secondary"

        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"

        android:insetTop="0dp"
        android:insetBottom="0dp"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/button_prise"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifty_help_button" />

    <View
        android:id="@+id/question_field"
        android:background="@drawable/question_shape"

        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prise_button" />

    <Button
        android:id="@+id/answer_a_button"
        android:background="@drawable/answer_card_shape"

        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/answer_a"
        android:textSize="12dp"
        android:gravity="center"

        android:insetTop="0dp"
        android:insetBottom="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_field" />

    <Button
        android:id="@+id/answer_b_button"
        android:background="@drawable/answer_card_shape"

        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/answer_b"
        android:textSize="12dp"
        android:gravity="center"

        android:insetTop="0dp"
        android:insetBottom="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_field" />

    <Button
        android:id="@+id/answer_v_button"
        android:background="@drawable/answer_card_shape"

        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/answer_c"
        android:textSize="12dp"
        android:gravity="center"

        android:insetTop="0dp"
        android:insetBottom="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_a_button" />

    <Button
        android:id="@+id/answer_g_button2"
        android:background="@drawable/answer_card_shape"

        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/answer_d"
        android:textSize="12dp"
        android:gravity="center"

        android:insetTop="0dp"
        android:insetBottom="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_b_button" />

    <View
        android:id="@+id/a_letter_field"
        android:background="@drawable/answer_letter_shape"

        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"

        app:layout_constraintBottom_toBottomOf="@+id/answer_a_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/answer_a_button" />

    <View
        android:id="@+id/b_letter_field"
        android:layout_width="24dp"

        android:layout_height="24dp"
        android:layout_marginStart="196dp"

        android:background="@drawable/answer_letter_shape"
        app:layout_constraintBottom_toBottomOf="@+id/answer_b_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/answer_b_button" />

    <View
        android:id="@+id/v_letter_field"
        android:background="@drawable/answer_letter_shape"

        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"

        app:layout_constraintBottom_toBottomOf="@+id/answer_v_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/answer_v_button" />

    <View
        android:id="@+id/g_letter_field"
        android:layout_width="24dp"

        android:layout_height="24dp"
        android:layout_marginStart="196dp"
        android:background="@drawable/answer_letter_shape"

        app:layout_constraintBottom_toBottomOf="@+id/answer_g_button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/answer_g_button2" />

    <TextView
        android:id="@+id/a_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/letter_a"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/a_letter_field"
        app:layout_constraintEnd_toEndOf="@+id/a_letter_field"
        app:layout_constraintStart_toStartOf="@+id/a_letter_field"
        app:layout_constraintTop_toTopOf="@+id/a_letter_field" />

    <TextView
        android:id="@+id/b_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/letter_b"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/b_letter_field"
        app:layout_constraintEnd_toEndOf="@+id/b_letter_field"
        app:layout_constraintStart_toStartOf="@+id/b_letter_field"
        app:layout_constraintTop_toTopOf="@+id/b_letter_field" />

    <TextView
        android:id="@+id/v_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/letter_c"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="@+id/v_letter_field"
        app:layout_constraintEnd_toEndOf="@+id/v_letter_field"
        app:layout_constraintStart_toStartOf="@+id/v_letter_field"
        app:layout_constraintTop_toTopOf="@+id/v_letter_field" />

    <TextView
        android:id="@+id/g_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserratalternates_semibold"
        android:text="@string/letter_d"

        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/g_letter_field"
        app:layout_constraintEnd_toEndOf="@+id/g_letter_field"
        app:layout_constraintStart_toStartOf="@+id/g_letter_field"
        app:layout_constraintTop_toTopOf="@+id/g_letter_field" />

</androidx.constraintlayout.widget.ConstraintLayout>